--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@
 }
 
 body{
+    background-image: url(https://media.enfibras.com/100-large_default/nube-movil.jpg);
     background-color: #976BAC  ;
     font-family: 'Raleway';
 }
